WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
66133
[CSSRegions] Fix mouse events on the RenderRegions
https://bugs.webkit.org/show_bug.cgi?id=66133
Summary
[CSSRegions] Fix mouse events on the RenderRegions
Alexandru Chiculita
Reported
2011-08-12 04:14:21 PDT
RenderRegions should use the RenderFlowThread for hit testing.
Attachments
Patch
(9.88 KB, patch)
2011-08-12 13:44 PDT
,
Dave Hyatt
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2011-08-12 13:44:44 PDT
Created
attachment 103809
[details]
Patch
Dave Hyatt
Comment 2
2011-08-12 14:02:33 PDT
Fixed in
r92993
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug