https://bugs.webkit.org/show_bug.cgi?id=66133

Make hit testing work on RenderRegions. Pass off the hit testing to the RenderFlowThread
layer tree (just as we did with painting).

Reviewed by Sam Weinig.

Added hit-test-float.html to demonstrate basic hit testing of content flowed into regions.

Source/WebCore:

* rendering/HitTestRequest.h:
(WebCore::HitTestRequest::type):
* rendering/RenderFlowThread.cpp:
(WebCore::RenderFlowThread::hitTestRegion):
* rendering/RenderFlowThread.h:
* rendering/RenderRegion.cpp:
(WebCore::RenderRegion::paintReplaced):
(WebCore::RenderRegion::nodeAtPoint):
* rendering/RenderRegion.h:

LayoutTests:

* fast/regions/hit-test-float-expected.txt: Added.
* fast/regions/hit-test-float.html: Added.



Canonical link: https://commits.webkit.org/82018@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92993 268f45cc-cd09-0410-ab3c-d52691b4dbfc